Fix dark mode bugs

--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@
     box-sizing: border-box;
 }
 
+.light {
+    display: block;
+}
+.dark {
+    display: none;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
@@ -13,7 +20,10 @@ body {
 }
 
 @media all and (prefers-color-scheme: dark) {
-    .google-logo img {
-        content: url("/img/googlelogo_light_color_272x92dp.png");
+    .light{
+        display: none;
+    }
+    .dark {
+        display: block;
     }
 }
